# libedge-proto

./: .gitignore  CMakeLists.txt  README.md  review.md  spec.md
include/: edge_core.h
include/libedge/: edge_common.h  edge_dlms.h  edge_dlt645.h  edge_dlt698.h  edge_dnp3.h  edge_iec104.h  edge_modbus.h
include/protocols/: edge_dlms.h  edge_dlt645.h  edge_modbus.h
src/common/: crc.c  crc.h
src/core/: edge_cursor.c  edge_vector.c
src/dlms/: dlms_codec.c
src/dlt645/: dlt645_2007.c
src/dlt698/: dlt698_codec.c
src/iec104/: iec104_codec.c
src/modbus/: modbus_codec.c
src/protocols/dlms/: dlms_axdr.c  dlms_block.c  dlms_cosem.c  dlms_encoder.c  dlms_hdlc.c  dlms_ic.c  dlms_security.c  dlms_server.c
src/protocols/dlt645/: dlt645_codec.c
src/protocols/dlt698/: dlt698_apdu.c  dlt698_codec.c
src/protocols/dnp3/: dnp3_app.c  dnp3_link.c  dnp3_link_rx.c  dnp3_transport.c
src/protocols/iec104/: iec104_apci.c  iec104_asdu.c  iec104_session.c
src/protocols/modbus/: mb_adu.c  mb_parser.c  mb_pdu.c  mb_slave.c
tests/: test_core.c  test_dlms.c  test_dlms_expert.c  test_dlms_full.c  test_dlt645.c  test_dlt698.c  test_dnp3_expert.c  test_iec104.c  test_iec104_expert.c  test_main.c  test_modbus.c
